--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,24 @@
 
     @font-face {
         font-family:'Roboto';
-        src: url(../fonts/Roboto-Light.ttf);}
+        src: url(../fonts/Roboto-Black.ttf);}
 
 body{
     background:#F9D423;
 }
 
 .btn{
-    width: 402px;
     height: 60px;
     border: 2px solid #1B1B1B;
     border-radius: 100px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 500;
+font-size: 26px;
+
+color: #1B1B1B;
+
 }
 
 .box-pattern{
