--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,25 +12,11 @@
 
 body{
     background:#F9D423;
+    overflow-x: hidden;
 }
 
 .btn{
-    height: 60px;
+    height:60px;
     border: 2px solid #1B1B1B;
     border-radius: 100px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 500;
-font-size: 26px;
-
-color: #1B1B1B;
-
-}
-
-.box-pattern{
-    position: absolute;
-    top: 80px;
-    left: 0px;
-    z-index: 1;
 }
